--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
-    <div class="wrapper">
-      <div class="container">
+    <div role="wrapper" class="wrapper">
+      <div role="container" class="container">
         <img src="images/image-qr-code.png" />
-        <div class="card-body">
+        <div role="card-body" class="card-body">
           <h1>Improve your front-end skills by building projects</h1>
           <p>
             Scan the QR code to visit Frontend Mentor and take your coding
@@ -33,7 +33,7 @@
       </div>
     </div>
 
-    <div class="attribution">
+    <div role="attribution" class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
