--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <div role="wrapper" class="wrapper">
       <div role="container" class="container">
-        <img src="images/image-qr-code.png" />
+        <img alt="qr-code-frontend-mentor" src="images/image-qr-code.png" />
         <div role="card-body" class="card-body">
           <h1>Improve your front-end skills by building projects</h1>
           <p>
