--- a/index.html
+++ b/index.html
@@ -20,18 +20,20 @@
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
-    <div role="wrapper" class="wrapper">
-      <div role="container" class="container">
-        <img alt="qr-code-frontend-mentor" src="images/image-qr-code.png" />
-        <div role="card-body" class="card-body">
-          <h1>Improve your front-end skills by building projects</h1>
-          <p>
-            Scan the QR code to visit Frontend Mentor and take your coding
-            skills to the next level
-          </p>
+    <main>
+      <div role="wrapper" class="wrapper">
+        <div role="container" class="container">
+          <img alt="qr-code-frontend-mentor" src="images/image-qr-code.png" />
+          <div role="card-body" class="card-body">
+            <h1>Improve your front-end skills by building projects</h1>
+            <p>
+              Scan the QR code to visit Frontend Mentor and take your coding
+              skills to the next level
+            </p>
+          </div>
         </div>
       </div>
-    </div>
+    </main>
 
     <div role="attribution" class="attribution">
       Challenge by
