--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
-    <main>
+    <main role="main">
       <div role="wrapper" class="wrapper">
         <div role="container" class="container">
           <img alt="qr-code-frontend-mentor" src="images/image-qr-code.png" />
