--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
   </head>
   <body>
     <main role="main">
-      <div role="wrapper" class="wrapper">
-        <div role="container" class="container">
+      <div role="group" class="wrapper">
+        <div role="group" class="container">
           <img alt="qr-code-frontend-mentor" src="images/image-qr-code.png" />
-          <div role="card-body" class="card-body">
+          <div role="presentation" class="card-body">
             <h1>Improve your front-end skills by building projects</h1>
             <p>
               Scan the QR code to visit Frontend Mentor and take your coding
