--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   </head>
   <body>
     <main role="main">
-      <div role="group" class="wrapper">
-        <div role="group" class="container">
+      <div class="wrapper">
+        <div class="container">
           <img alt="qr-code-frontend-mentor" src="images/image-qr-code.png" />
           <div role="presentation" class="card-body">
             <h1>Improve your front-end skills by building projects</h1>
@@ -34,13 +34,15 @@
         </div>
       </div>
     </main>
-
-    <div role="attribution" class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by
-      <a href="https://www.frontendmentor.io/profile/emibonezzi">emibonezzi</a>.
-    </div>
+    <footer>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by
+        <a href="https://www.frontendmentor.io/profile/emibonezzi">emibonezzi</a
+        >.
+      </div>
+    </footer>
   </body>
 </html>
